--- a/index.html
+++ b/index.html
@@ -395,6 +395,7 @@
         
         <!-- Intro Section -->
         <div class="intro-section" id="introSection">
+            <img src="https://gleam-prod-user-assets.s3.amazonaws.com/user-assets/2289086/zazAFqiyteQtvji9/e8f990b2ef464a22b888687efae1f558.jpg" alt="ESA Awnings Inc. $50 Amazon Gift Card Contest" class="contest-banner">
             <div class="intro-content">
                 <h2>🎁 $50 Amazon Gift Card Contest - Bonus Quiz</h2>
                 <p>This quiz is part of the ESA Awnings $50 Amazon Gift Card Contest. Complete it perfectly to unlock a secret bonus code worth <strong>50 extra entries</strong> in the sweepstakes!</p>
